feat(api-first): enhance api: add models
