# blg-openapi.yml
@@ -40,6 +40,7 @@ paths:
     get:
       tags:
         - Posts
+      operationId: getPosts
       summary: Return all the posts
       description: Return all the posts that are in our blog.
       responses:
@@ -53,6 +54,7 @@ paths:
     post:
       tags:
         - Posts
+      operationId: createPost
       requestBody:
         required: true
         content:
@@ -69,6 +71,7 @@ paths:
       tags:
         - Posts
       summary: Return a post
+      operationId: getPost
       description: Return a post with postId equals to id.
       parameters:
       - name: id
@@ -88,6 +91,7 @@ paths:
       tags:
         - Posts
       summary: Update a post
+      operationId: updatePost
       description: A  complete replacement of a post with id.
       parameters:
       - name: id
@@ -109,6 +113,7 @@ paths:
     patch:
       tags:
         - Posts
+      operationId: patchPost
       summary: Update a post
       description: Update the post with id partially.
       parameters:
@@ -131,6 +136,7 @@ paths:
     delete:
       tags:
         - Posts
+      operationId: deletePost
       summary: Deletes a post
       description: Deletes the post with id.
       parameters:
@@ -209,7 +215,7 @@ components:
             $ref: '#/components/schemas/Case'
         body:
           type: string
-          description: "The body content of the post"
+          description: "The body content of the post in markdown format"
       required:
         - id
         - userId
@@ -220,18 +226,40 @@ components:
           id: 1
           title: "The First Post"
           body: "we are building a blog post API using OpenAPI Specification."
+    Point:
+      type: object
+      properties:
+        x:
+          type: number
+        y:
+          type: number
     Case:
       type: object
       properties:
         id:
           type: string
-        x:
+        postId: 
           type: string
-        y:
+        mask:
+          type: array
+          description: position of case edge points.
+          items:
+            $ref: '#/components/schemas/Point'
+        caseType:
           type: string
+          description: "animated or not"
+          enum: ["svg", "3d", "canvas"]
+        code:
+          type: array
+          items:
+            $ref: '#/components/schemas/CodeFile'
+        texts:
+          type: array
+          items:
+            $ref: '#/components/schemas/Bubble'
       required:
         - id
-        - x
+        - mask
         - title
     PatchPost:
       type: object
@@ -248,6 +276,10 @@ components:
         body:
           type: string
           description: "The body content of the post"
+        strip:
+          type: array
+          items:
+            $ref: '#/components/schemas/Case'
     Comments:
       description: "The array of comment objects"
       type: array
@@ -276,6 +308,37 @@ components:
           "body": "quia molestiae reprehenderit quasi aspernatur"
         }
       ]
+    Bubble:
+      type: object
+      properties:
+        bubbleType:
+          type: string
+          enum: ["square", "round"]
+        text:
+          type: object
+          $ref: "#/components/schemas/Translated"
+    
+    Translated:
+      type: object
+      properties:
+        fr_FR:
+          type: string
+        us_EN:
+          type: string
+
+    CodeFile:
+      type: object
+      properties:
+        id:
+          type: string
+          description: "The code file id."
+        caseId:
+          type: string
+          description: "The case id."
+        type:
+          type: string
+          enum: ["shader", "babylon", "svg"]
+
     Comment:
       type: object
       properties:
