# src/app/api/models.ts
@@ -1,6 +1,10 @@
 export { Posts } from './models/posts';
 export { Post } from './models/post';
+export { Point } from './models/point';
 export { Case } from './models/case';
 export { PatchPost } from './models/patch-post';
 export { Comments } from './models/comments';
+export { Bubble } from './models/bubble';
+export { Translated } from './models/translated';
+export { CodeFile } from './models/code-file';
 export { Comment } from './models/comment';
