# src/app/api/models/code-file.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+export interface CodeFile {
+
+  /**
+   * The case id.
+   */
+  caseId?: string;
+
+  /**
+   * The code file id.
+   */
+  id?: string;
+  type?: 'shader' | 'babylon' | 'svg';
+}
