# src/app/api/models/patch-post.ts
@@ -1,4 +1,5 @@
 /* tslint:disable */
+import { Case } from './case';
 export interface PatchPost {
 
   /**
@@ -10,6 +11,7 @@ export interface PatchPost {
    * The post id.
    */
   id?: string;
+  strip?: Array<Case>;
 
   /**
    * The title of the post
