# src/app/api/models/translated.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface Translated {
+  fr_FR?: string;
+  us_EN?: string;
+}
